--- a/exercicios/ex021/fundo006.html
+++ b/exercicios/ex021/fundo006.html
@@ -11,7 +11,7 @@
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
         }
         main {
@@ -32,7 +32,18 @@
     cum totam labore animi consequuntur omnis quas, illum maxime consequatur.</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam sunt ab 
     magnam praesentium soluta sint veniam velit aut aperiam cum. Ut delectus inventore 
-    sapiente et. Omnis deleniti delectus sequi nam.</p>
+    sapiente et. Omnis deleniti delectus sequi nam.
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quae quia voluptates quo, delectus libero neque reiciendis voluptatem doloribus nisi ut praesentium labore illo alias porro maxime soluta repellat id?
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate vitae veritatis minus repudiandae, odit numquam nam fugiat, labore rerum impedit itaque ratione inventore earum eveniet voluptates quia laudantium dignissimos facere?
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam delectus quidem vitae nobis tenetur. Ducimus, possimus. Odit, error consectetur officia tenetur ad aliquid adipisci maxime reprehenderit neque animi, commodi perferendis.
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse nisi ipsum cupiditate molestias perspiciatis laudantium neque repudiandae maiores dolorum, debitis quis doloribus nulla quas nihil dolores cum quidem adipisci. Quae.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem autem maiores, iste ea dolorem tempora ad velit deleniti culpa vitae et incidunt? Qui natus velit aut fugit ipsum molestiae harum!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio sed tempora libero. Obcaecati quam, ab dolorem excepturi quis beatae delectus voluptatum consequatur, aliquam est eos cumque porro quasi aperiam nihil.
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. At earum illum, non repellat recusandae voluptatibus quasi laborum accusantium hic atque commodi iusto quibusdam incidunt minima modi suscipit? Dicta, voluptatum? Sint.
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis, dolore in reprehenderit dolorum dolorem soluta nobis possimus est itaque pariatur dignissimos id animi repudiandae aperiam error cumque iusto aspernatur provident!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat repellat esse eius quasi necessitatibus vitae rerum. Asperiores nisi libero ea dolor molestiae iste in quaerat eum vitae placeat. Explicabo, quia.
+    
+  </p>
    </main>
 </body>
 </html>
