--- a/desafios/p.11/projeto-cordel.html
+++ b/desafios/p.11/projeto-cordel.html
@@ -24,7 +24,7 @@
             Vou dizer tudo em poesia.
         </p>
     </section>
-    <section class="image">
+    <section class="image" id="img01">
             <p>Não é mais como era antes <br>
             É tudo abreviado <br>
             "Você" só tem duas letras <br>
@@ -58,7 +58,7 @@
     </p>
     </section>
     
-    <section class="image">
+    <section class="image" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
